--- a/.env
+++ b/.env
@@ -52,8 +52,8 @@ MAIL_PORT=587
 MAIL_USERNAME=fatimazahranamaoui90@gmail.com
 MAIL_PASSWORD=fzrpeebjgtttdife
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS='aya@gmail.com'
-MAIL_FROM_NAME="test"
+MAIL_FROM_ADDRESS=''
+MAIL_FROM_NAME=""
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
